--- a/views/joke.ejs
+++ b/views/joke.ejs
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,6 +7,6 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <form action="/joke" type="GET"><button>Get Chucked</button></form>
+    <p><%= joke %></p>
   </body>
 </html>
